--- a/app/views/static_pages/women.html.erb
+++ b/app/views/static_pages/women.html.erb
@@ -10,166 +10,166 @@
 <br>
 <div class="catalog">
   <div class="women_underwear">
-    <a href="assets/Pigiama_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3001
-			"><img src="assets/Pigiama_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3001
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3001</h4>
   </div>
   <div class="women_underwear">
-    <a href="assets/Pigiama2_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3002
-			"><img src="assets/Pigiama2_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama2_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3002
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama2_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3002</h4>
   </div>
   <div class="women_underwear">
-    <a href="assets/Pigiama3_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3003
-			"><img src="assets/Pigiama3_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama3_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3003
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama3_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3003</h4>
   </div>
   <div class="women_underwear">
-    <a href="assets/Pigiama4_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 390грн<br> code: 3025
-			"><img src="assets/Pigiama4_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama4_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 390грн<br> code: 3025
+			"><img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama4_gimp_out_label.png" alt="photo"/></a>
     <h3>390 грн</h3>
     <h4>code: 3025</h4>
   </div>
 
   <div class="women_underwear">
-  <a href="assets/Pigiama5_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3042">
-  <img src="assets/Pigiama5_gimp_out_label.png" alt="photo"/></a>
+  <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama5_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3042">
+  <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama5_gimp_out_label.png" alt="photo"/></a>
   <h3>330 грн</h3>
     <h4>code: 3042</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama6_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3004">
-      <img src="assets/Pigiama6_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama6_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3004">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama6_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3004</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama7_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3006">
-      <img src="assets/Pigiama7_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama7_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3006">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama7_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3006</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama8_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3007">
-      <img src="assets/Pigiama8_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama8_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3007">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama8_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3007</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama9_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 390грн<br> code: 3008">
-      <img src="assets/Pigiama9_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama9_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 390грн<br> code: 3008">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama9_gimp_out_label.png" alt="photo"/></a>
     <h3>390 грн</h3>
     <h4>code: 3008</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama10_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3009">
-      <img src="assets/Pigiama10_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama10_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3009">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama10_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3009</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama11_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3011">
-      <img src="assets/Pigiama11_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama11_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3011">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama11_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3011</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama12_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3013">
-      <img src="assets/Pigiama12_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama12_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3013">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama12_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3013</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama13_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3015">
-      <img src="assets/Pigiama13_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama13_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3015">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama13_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3015</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama14_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3016">
-      <img src="assets/Pigiama14_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama14_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3016">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama14_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3016</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama15_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3018">
-      <img src="assets/Pigiama15_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama15_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3018">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama15_gimp_out_label.png" alt="photo"/></a>
     <h3>390 грн</h3>
     <h4>code: 3018</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama16_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3021">
-      <img src="assets/Pigiama16_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama16_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3021">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama16_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3021</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama17_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3022">
-      <img src="assets/Pigiama17_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama17_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3022">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama17_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3022</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama18_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3023">
-      <img src="assets/Pigiama18_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama18_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3023">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama18_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3023</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama19_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3032">
-      <img src="assets/Pigiama19_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama19_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3032">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama19_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3032</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama20_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3036">
-      <img src="assets/Pigiama20_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama20_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3036">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama20_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3036</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama21_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3038">
-      <img src="assets/Pigiama21_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama21_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3038">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama21_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3038</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama22_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3045">
-      <img src="assets/Pigiama22_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama22_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3045">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama22_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3045</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama23_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3048">
-      <img src="assets/Pigiama23_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama23_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3048">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama23_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3048</h4>
   </div>
 
   <div class="women_underwear">
-    <a href="assets/Pigiama24_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3041">
-      <img src="assets/Pigiama24_gimp_out_label.png" alt="photo"/></a>
+    <a href="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama24_gimp_out_label.png" data-fancybox="gallery" data-fancybox data-caption="Цена - 330грн<br> code: 3041">
+      <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Pigiama/Pigiama24_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
     <h4>code: 3041</h4>
   </div>
