--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -35,7 +35,7 @@
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="assets/Home_image1.png" alt="Chania" width="460" height="345">
+        <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Carousel/Home_image1.png" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3 style="font-size: x-large; color: #ddd9a9;">Пижама 1</h3>
           <p style="color: #ddd9a9;">Тут Будет Новость по 1й Пижаме</p>
@@ -44,7 +44,7 @@
 
       <div class="item">
 
-        <img src="assets/Home_image2.png" alt="Chania" width="460" height="345">
+        <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Carousel/Home_image2.png" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3 style="font-size: x-large; color: #ddd9a9;">Пижама 2</h3>
           <p style="color: #ddd9a9;">Тут Будет Новость по 2й Пижаме</p>
@@ -52,7 +52,7 @@
       </div>
 
       <div class="item">
-        <img src="assets/Home_image3.png" alt="Flower" width="460" height="345">
+        <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Carousel/Home_image3.png" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
           <h3 style="font-size: x-large; color: #ddd9a9;">Пижама 3</h3>
           <p style="color: #ddd9a9;">Новости по 3й Пижаме</p>
@@ -60,7 +60,7 @@
       </div>
 
       <div class="item">
-        <img src="assets/Home_image4.png" alt="Flower" width="460" height="345">
+        <img src="https://s3.eu-central-1.amazonaws.com/ievtushenko/Carousel/Home_image4.png" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
           <h3 style="font-size: x-large; color: #ddd9a9;">Пижама 4</h3>
           <p style="color: #ddd9a9;">Новости по 4й Пижаме</p>
